Fixed padding bug * textInput bottom padding covered the underline

--- a/src/client/styles/components/textInput.scss
+++ b/src/client/styles/components/textInput.scss
@@ -20,7 +20,7 @@
     box-sizing: border-box;
     min-width: 10px;
     width: 100%;
-    padding: .8rem;
+    padding: .8rem .8rem 0;
     font-size: $size-m;
     border: none;
     background-color: white;
